# Multibot-WS

./: Prise de notes_TUTO_ROS.txt  README.md
backupFiles/: .bashrc
devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorial/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/rrt_exploration/: PointArray.h
devel/lib/beginner_tutorial/: add_two_ints_client  add_two_ints_server  listener  publisher_clicked_point  talker
devel/lib/explore_lite/: explore
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/multirobot_map_merge/: map_merge
devel/lib/pkgconfig/: beginner_tutorial.pc  explore_lite.pc  gmapping.pc  multirobot_map_merge.pc  rrt_exploration.pc  rrt_exploration_tutorials.pc
devel/lib/python2.7/dist-packages/rrt_exploration/msg/: _PointArray.py
devel/lib/rrt_exploration/: global_rrt_detector  local_rrt_detector
devel/share/beginner_tutorial/cmake/: beginner_tutorial-msg-paths.cmake  beginner_tutorialConfig.cmake
devel/share/explore_lite/cmake/: explore_liteConfig.cmake
devel/share/gmapping/cmake/: gmappingConfig.cmake
devel/share/multirobot_map_merge/cmake/: multirobot_map_mergeConfig.cmake
devel/share/rrt_exploration/cmake/: rrt_exploration-msg-paths.cmake  rrt_explorationConfig.cmake
devel/share/rrt_exploration_tutorials/cmake/: rrt_exploration_tutorialsConfig.cmake
install/: .rosinstall  _setup_util.py  setup.sh
install/include/beginner_tutorial/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
install/lib/pkgconfig/: beginner_tutorial.pc
install/share/beginner_tutorial/: package.xml
install/share/beginner_tutorial/cmake/: beginner_tutorialConfig.cmake
scriptsBash/simulationAvecPlusieursRobots/: automatisationMappingMultipleRobots.sh  automatisationMappingMultipleRobots.sh~  closeProcess.sh~  enregistrerLaMap.sh  enregistrerLaMap.sh~  finalExplorationAvecPlusieursRobots.sh  finalExplorationAvecPlusieursRobots.sh~  lancerAlgorithmeSLAM-plusieurs_robots.sh  lancerAlgorithmeSLAM-plusieurs_robots.sh~  ouvrirGazeboRviz-plusieurs-Robots.sh  ouvrirGazeboRviz-plusieurs-Robots.sh~  publishDesClickedPoints.sh~  terminerAcquisition.sh  terminerAcquisition.sh~
scriptsBash/simulationAvecPlusieursRobots/map/: 2018_03_02_11_30.pgm  2018_03_02_11_30.yaml
scriptsBash/simulationAvecUnRobot/: automatisationMappingSingleRobot.sh  automatisationMappingSingleRobot.sh~  closeProcess.sh  enregistrerLaMap.sh  enregistrerLaMap.sh~  finalExplorationAvecUnRobot.sh  lancerAlgorithmeSLAM-1_robot.sh  ouvrirGazeboRviz-unSeulRobot.sh  publishDesClickedPoints.sh  terminerAcquisition.sh  terminerAcquisition.sh~
scriptsBash/simulationAvecUnRobot/map/: 2018_02_26_11_45.pgm  2018_02_26_11_45.yaml  2018_02_26_14_15.pgm  2018_02_26_14_15.yaml
src/beginner_tutorial/: CMakeLists.txt  package.xml~
src/beginner_tutorial/launch/: turtlemimic.launch~
src/beginner_tutorial/src/: publisher_clicked_point.cpp~
worldsDeGazebo/worlds/: myEnvironment.world
